<resources>
    <string name="app_name">presentation</string>
    <string name="notification_manager_title">Менеджер уведомлений</string>
    <string name="notification_manager_settings">Настройки</string>
    <string name="notification_manager_missed_notifications">Пропущенные\nуведомления</string>
    <string name="notification_manager_do_not_disturb">Не беспокоить</string>
    <string name="notification_manager_description_distrub">Отключите все звонки и уведомления на своем\nтелефоне</string>
    <string name="notification_manager_add_timetable">Добавить расписание</string>
    <string name="notification_manager_clear_notification">Очистить шторку</string>
    <string name="notification_manager_desc_clear_notifications">Единоразово удалите все уведомления из шторки</string>
    <string name="notification_manager_clear_notofications">Удалить все уведомления</string>
    <string name="notification_manager_applications_limitations">Допуск уведомлений</string>
    <string name="notification_manager_desc_app_limitations">Отключите допуск у выбранных приложений, чтобы уведомления от них приходили во вкладку “Пропущенные уведомления”, а не в панель уведомлений на вашем телефоне</string>
    <string name="notification_manager_limit_all_apps">Все приложения</string>
    <string name="notification_maneger_count_notifications">Пропущенно уведомлений: %s</string>
    <string name="notification_manager_notifications_cleared">Уведомления удалены</string>
    <string name="notification_manager_clear_all">Очистить все</string>
    <string name="notification_manager_cool">Супер!</string>
    <string name="notification_manager_notification_cleared">Ваш телефон очищен\nот лишних\nуведомлений</string>
    <string name="notification_manager_clearing">Удаляем уведомления</string>
    <string name="notification_manager_clearing_notification">Очищаем шторку…</string>
    <string name="notification_manager_now">Сейчас</string>
    <string name="notification_manager_min_ago">%s мин. назад</string>
    <string name="notification_manager_delete">Удалить</string>
    <string name="notification_manager_mon">Пн</string>
    <string name="notification_manager_tu">Вт</string>
    <string name="notification_manager_we">Ср</string>
    <string name="notification_manager_th">Чт</string>
    <string name="notification_manager_fr">Пт</string>
    <string name="notification_manager_sat">Сб</string>
    <string name="notification_manager_sun">Вс</string>
    <string name="notification_manager_repeat">Повтор</string>
    <string name="notification_manager_every_week">Еженедельно (%s)</string>
    <string name="notification_manager_only_today_without_repeat">Без повтора, только сегодня</string>
    <string name="notification_manager_only_today">Только сегодня</string>
    <string name="notification_manager_save">Сохранить</string>
    <string name="notification_manager_time">Время</string>
    <string name="notification_manager_auto_switch">Автоматическое включение</string>
    <string name="notification_manager_dnd_description">Настройте время и дни недели, когда режим “Не беспокоить” будет активен</string>
    <string name="notification_manager_since">С</string>
    <string name="notification_manager_before">До</string>
    <string name="notification_manager_wrong_format">Установите корректное время</string>
    <string name="notification_manager_need_permission">Нам требуется разрешение</string>
    <string name="notification_manager_body_permission">Нам нужен доступ к просмотру ваших уведомлений, чтобы вы могли выбирать от каких приложений вы не хотите получать уведомления</string>
    <string name="notification_manager_close">Закрыть</string>
    <string name="notification_manager_allow_permission">Разрешить</string>
</resources>